Button Mobile Fix

--- a/index.css
+++ b/index.css
@@ -349,9 +349,10 @@ input {
 }
 
 .button {
-	width: 90%;
+	width: 91%;
 	font-size:10px;
 	padding: 30px 0px 30px 0px;
+	margin-top: 15px;
 }
 
 /* Portrait */
